# xxx

./: CMakeLists.txt
filewriter/: CMakeLists.txt  slotfactory.cpp
manager/: CMakeLists.txt  config.xml  entry.h  main.cpp  slot.h  slotfactory.h  slotmanager.cpp  slotmanager.h
tick/: CMakeLists.txt  slotfactory.cpp  slotfactory.h
